// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClosableModal renders with title 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "flex": 0,
      "height": 1334,
      "justifyContent": "flex-start",
      "paddingTop": 26,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "margin": 16,
        "marginTop": 16,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={null}
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Icon
        color="rgba(155,155,155,1)"
        name="close"
        size={24}
        style={null}
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(74,74,74,1)",
          "fontFamily": "NunitoSans-Regular",
          "fontSize": 16,
          "marginLeft": 16,
        }
      }
    >
      Select your country
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`ClosableModal renders without title 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "flex": 0,
      "height": 1334,
      "justifyContent": "flex-start",
      "paddingTop": 26,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "margin": 16,
        "marginTop": 16,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={null}
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Icon
        color="rgba(155,155,155,1)"
        name="close"
        size={24}
        style={null}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;
